--- a/hardhat-lottery/backend/package.json
+++ b/hardhat-lottery/backend/package.json
@@ -24,5 +24,8 @@
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.5.1",
     "solidity-coverage": "^0.8.4"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.6.1"
   }
 }
